[gd_scene load_steps=12 format=3 uid="uid://bvhte3ha4xng3"]

[ext_resource type="Script" path="res://menu.gd" id="1_2f086"]
[ext_resource type="FontFile" uid="uid://qdqpkxcpn458" path="res://Instruction.otf" id="2_g21sa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r4bny"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qilbf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v2mib"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_otqhx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v7vw3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_740vx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_65c84"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2bc40"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ohvqm"]

[node name="menu" type="Node2D"]
script = ExtResource("1_2f086")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1044.0
offset_bottom = 620.0

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_right = 1038.0
offset_bottom = 613.0
color = Color(0, 0, 0, 1)

[node name="button_41000" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 42.0
offset_top = 61.0
offset_right = 255.0
offset_bottom = 144.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 62
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qilbf")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v2mib")
theme_override_styles/focus = SubResource("StyleBoxEmpty_otqhx")
text = "41000"
expand_icon = true

[node name="button_41008" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 253.0
offset_top = 57.0
offset_right = 464.0
offset_bottom = 140.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 62
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qilbf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v7vw3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_740vx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_65c84")
text = "41008"
expand_icon = true

[node name="button_41011" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 426.0
offset_top = 56.0
offset_right = 629.0
offset_bottom = 139.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 62
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qilbf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v7vw3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_740vx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_65c84")
text = "41011"
expand_icon = true

[node name="button_41012" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 629.0
offset_top = 68.0
offset_right = 832.0
offset_bottom = 149.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 62
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qilbf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2bc40")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v2mib")
theme_override_styles/focus = SubResource("StyleBoxEmpty_otqhx")
text = "41012"
expand_icon = true

[node name="button_41014" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 837.0
offset_top = 73.0
offset_right = 1040.0
offset_bottom = 154.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 62
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qilbf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2bc40")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v2mib")
theme_override_styles/focus = SubResource("StyleBoxEmpty_otqhx")
text = "41014"
expand_icon = true

[node name="button_41041" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 47.0
offset_top = 268.0
offset_right = 250.0
offset_bottom = 349.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 62
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qilbf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2bc40")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v2mib")
theme_override_styles/focus = SubResource("StyleBoxEmpty_otqhx")
text = "41041"
expand_icon = true

[node name="button_41091" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 242.0
offset_top = 269.0
offset_right = 445.0
offset_bottom = 350.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 62
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qilbf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2bc40")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v2mib")
theme_override_styles/focus = SubResource("StyleBoxEmpty_otqhx")
text = "41091"
expand_icon = true

[node name="button_41092" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 450.0
offset_top = 265.0
offset_right = 657.0
offset_bottom = 346.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 62
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qilbf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2bc40")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v2mib")
theme_override_styles/focus = SubResource("StyleBoxEmpty_otqhx")
text = "41092"
expand_icon = true

[node name="button_41093" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 646.0
offset_top = 188.0
offset_right = 856.0
offset_bottom = 269.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 62
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qilbf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v7vw3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_740vx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_65c84")
text = "41093
"
expand_icon = true

[node name="button_41094" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 842.0
offset_top = 198.0
offset_right = 1055.0
offset_bottom = 279.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 62
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qilbf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v7vw3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_740vx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_65c84")
text = "41094
"
expand_icon = true

[node name="button_41095" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 53.0
offset_top = 417.0
offset_right = 264.0
offset_bottom = 498.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 62
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qilbf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v7vw3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_740vx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_65c84")
text = "41095
"
expand_icon = true

[node name="button_41096" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 252.0
offset_top = 379.0
offset_right = 465.0
offset_bottom = 460.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 62
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qilbf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v7vw3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_740vx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_65c84")
text = "41096"
expand_icon = true

[node name="button_41097" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 454.0
offset_top = 383.0
offset_right = 660.0
offset_bottom = 464.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 62
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qilbf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v7vw3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_740vx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_65c84")
text = "41097"
expand_icon = true

[node name="button_41098" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 647.0
offset_top = 376.0
offset_right = 858.0
offset_bottom = 457.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 62
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qilbf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v7vw3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_740vx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_65c84")
text = "41098"
expand_icon = true

[node name="button_41099" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 842.0
offset_top = 374.0
offset_right = 1055.0
offset_bottom = 455.0
scale = Vector2(0.75, 0.75)
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 62
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4bny")
theme_override_styles/hover = SubResource("StyleBoxFlat_qilbf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v7vw3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_740vx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_65c84")
text = "41099"
expand_icon = true

[node name="Label" type="Label" parent="TextureRect/ColorRect"]
visible = false
layout_mode = 0
offset_left = 162.0
offset_top = 11.0
offset_right = 1101.0
offset_bottom = 123.0
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 75

[node name="Button2" type="Button" parent="TextureRect/ColorRect"]
layout_mode = 0
offset_left = 346.0
offset_top = 502.0
offset_right = 668.0
offset_bottom = 583.0
theme_override_fonts/font = ExtResource("2_g21sa")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_ohvqm")
text = "Start"

[connection signal="pressed" from="TextureRect/ColorRect/button_41000" to="." method="_on_button_41000_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/button_41008" to="." method="_on_button_41008_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/button_41011" to="." method="_on_button_41011_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/button_41012" to="." method="_on_button_41012_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/button_41014" to="." method="_on_button_41014_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/button_41041" to="." method="_on_button_41041_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/button_41091" to="." method="_on_button_41091_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/button_41092" to="." method="_on_button_41092_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/button_41093" to="." method="_on_button_41093_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/button_41094" to="." method="_on_button_41094_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/button_41095" to="." method="_on_button_41095_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/button_41096" to="." method="_on_button_41096_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/button_41097" to="." method="_on_button_41097_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/button_41098" to="." method="_on_button_41098_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/button_41099" to="." method="_on_button_41099_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/Button2" to="." method="_on_button_2_pressed"]
